--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -57,7 +57,7 @@
                         <li>a piece of mail addressed to you at the damaged property address which shows that you lived in the residence at the time of the event, such as a BC Hydro bill, utility bill, bank statement, or vehicle insurance.</li>
                       </ul>
                     </div>
-                    <div class="radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
+                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
                       <br/>
                       <mat-label class="sub-heading">What type of small business?<span style="color:red" >*</span></mat-label>
                       <br />
@@ -140,7 +140,7 @@
                         </div>
                       </mat-radio-group>
                     </div>
-                    <div class="radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.FarmOwner">
+                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="appTypeInsuranceForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.FarmOwner">
                       <br/>
                       <mat-label class="sub-heading">What type of farm?<span style="color:red" >*</span></mat-label>
                       <br />
