--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.scss
@@ -24,7 +24,11 @@ mat-form-field {
 
 .horizontal-radio-group {
   display: flex; flex-direction: row;
-  /* display: inline-grid; */
-  /* display: grid; */
   margin: 15px 0;
+}
+
+.button-width {
+  width: 100%;
+  margin-bottom: 10px;
+  height: 80px;
 }
