--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -1,22 +1,14 @@
 <mat-card class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
 
-    <div class="row">
-      <div class="col-md-4">
-        <p>Answer the following questions to find out if you are eligible for Disaster Financial Assistance (DFA). </p>
-        <br/>
-      </div>
-      <div class="sub-heading radio-extra-label col-md-6" style="border: 3px solid #70abd9">
-        <b>This page is for individuals, small businesses, farms, and charitable organizations. If you're an Indigenous community or local government your process is different: <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa" target="_blank">DFA for community recovery</a>.</b>
-      </div>
-    </div>
-
     <form [formGroup]="prescreeningForm">
 
       <ng-container>
         <!-- Applicant options -->
         <div class="row">
-          <div class="col-md-12 bottomspace">
+          <div class="col-md-8 bottomspace">
+            <p>Answer the following questions to find out if you are eligible for Disaster Financial Assistance (DFA). </p>
+            <br/>
             <mat-label class="sub-heading">Are you applying for DFA as one of the following?<span style="color:red" >*</span></mat-label>
             <br /><br/>
             <p style="font-size: 15px">
@@ -38,16 +30,16 @@
                    <span *ngIf="option.value === radioApplicantOptions.Homeowner"> {{ option.value }}</span>
                   </mat-radio-button><br />
                   <div class="row">
-                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.Homeowner">
+                    <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.Homeowner">
                       <br/>
                       To qualify for DFA you must have occupied the property as your principal residence at the time of the event. Seasonal or recreational properties aren’t eligible. If you are a landlord, you must apply and qualify as a small business owner.
-                      <br/>
+                      <br/><br/>
                       As a homeowner, you must provide the following with your DFA application:<br/>
                       <ul>
                         <li><a href="https://www2.gov.bc.ca/assets/gov/public-safety-and-emergency-services/emergency-preparedness-response-recovery/embc/dfa/dfa_homeowners_insurance_template.pdf" target="_blank">insurance template</a> completed by your insurance broker.</li>
                       </ul>
                     </div>
-                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.ResidentialTenant">
+                    <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.ResidentialTenant">
                       <br/>
                       To qualify for DFA, you must have occupied the property as your principal residence at the time of the event. Seasonal or recreational properties aren’t eligible.
                       <br/><br/>
@@ -58,7 +50,7 @@
                         <li>a copy of government issued identification such as Driver's License, Service Card, or BC ID</li>
                       </ul>
                     </div>
-                    <div class="sub-heading radio-extra-label col-md-4" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.ResidentialTenant && showOtherDocuments === true" style="border: 3px solid #70abd9">
+                    <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.ResidentialTenant && showOtherDocuments === true" style="border: 3px solid #70abd9">
                       <br/>
                       <b>Other documentation to show tenancy:</b>
                       If you don't have a rental or lease agreement, you may include:
@@ -67,7 +59,7 @@
                         <li>a piece of mail addressed to you at the damaged property address which shows that you lived in the residence at the time of the event, such as a BC Hydro bill, utility bill, bank statement, or vehicle insurance.</li>
                       </ul>
                     </div>
-                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
+                    <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.SmallBusinessOwner">
                       <br/>
                       To qualify for DFA, your business must:
                       <ul>
@@ -87,7 +79,7 @@
                         <li>lease agreements</li>
                       </ul>
                     </div>
-                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.FarmOwner">
+                    <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.FarmOwner">
                       <br/>
                       To qualify for DFA, your farm must:
                       <ul>
@@ -111,7 +103,7 @@
                         <li>supporting financial statements depending on the type of fram.</li>
                       </ul>
                     </div>
-                    <div class="sub-heading radio-extra-label col-md-6" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.CharitableOrganization">
+                    <div class="sub-heading radio-extra-label col-md-12" *ngIf="prescreeningForm.get('applicantOption').value === option.key && option.value === radioApplicantOptions.CharitableOrganization">
                       <br/>
                       To qualify for DFA, your charitable organization must:
                       <ul>
@@ -145,11 +137,51 @@
               >
             </mat-radio-group>
           </div>
+          <div class="col-md-4">
+            <div class="sub-heading radio-extra-label" style="border: 3px solid #70abd9">
+              <b>This page is for individuals, small businesses, farms, and charitable organizations. If you're an Indigenous community or local government your
+                process is different: <a href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/local-emergency-programs/financial/communities-dfa" target="_blank">DFA for community recovery</a>.</b>
+            </div>
+          </div>
         </div>
         <hr style="border: 2px solid;"/>
 
         <!-- Damaged Property Address -->
         <div class="row">
+          <div class="col-md-8 bottomspace">
+            <p class="sub-heading" style="font-size: 15px">
+              What is the damaged property address?<span style="color:red" >*</span>
+            </p>
+            <mat-radio-group
+              formControlName="isPrimaryAndDamagedAddressSame"
+              class="primary-radio-group"
+              (change)="onUseProfileAddressChoice($event)"
+              required
+              aria-label="Select an option">
+              <mat-radio-button value=true>Same as my profile address</mat-radio-button>
+              <div class="row radio-extra-label">
+                {{ profileAddress?.addressLine1}}<br/>
+                <div *ngIf="profileAddress?.addressLine2">{{ profileAddress?.addressLine2}}<br/></div>
+                {{ profileAddress?.city }}&nbsp;{{profileAddress?.stateProvince}}&nbsp;{{ profileAddress?.postalCode }}<br /><br/>
+              </div>
+              <mat-radio-button value=false>Different from my profile address above</mat-radio-button>
+              <div class="row radio-extra-label" *ngIf="prescreeningForm.get('isPrimaryAndDamagedAddressSame').value == 'false'">
+                <app-bc-address
+                  [addressForm]="prescreeningForm"
+                  [primaryAddressWarning]="false"
+                ></app-bc-address>
+              </div>
+            </mat-radio-group>
+            <button
+              mat-button
+              class="button-p"
+              style="float: left;"
+              type="button"
+              [disabled]="!isValidAddress"
+              (click)="checkAddressWithinOpenEvent()">
+                Check Address Eligibility
+            </button>
+          </div>
         </div>
         <hr style="border: 2px solid;"/>
 
@@ -177,6 +209,37 @@
 
         <!-- Date of damage -->
         <div class="row">
+          <p class="sub-heading" style="font-size: 15px">
+            What date was your property first impacted by the disaster event?<span style="color:red" >*</span>
+          </p>
+          <div class="col-md-4">
+            <mat-form-field appearance="outline" >
+              <input matInput
+                [matDatepicker]="fromPicker"
+                formControlName="damageFromDate"
+                [max]="todayDate"
+                required >
+              <mat-hint>MM/DD/YYYY</mat-hint>
+              <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+              <mat-datepicker #fromPicker></mat-datepicker>
+              <mat-error
+                *ngIf="
+                prescreeningForm.get('damageFromDate').invalid &&
+                prescreeningForm.get('damageFromDate').hasError('required')
+              "
+              >
+                From date is required</mat-error
+              >
+              <mat-error
+              *ngIf="
+              prescreeningForm.get('damageFromDate').invalid &&
+              prescreeningForm.get('damageFromDate').hasError('matDatepickerMax')
+            "
+            >
+              From date cannot be in the future</mat-error
+            >
+            </mat-form-field>
+          </div>
         </div>
         <hr style="border: 2px solid;"/>
 
