--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-prescreening-forms/prescreening/prescreening.component.html
@@ -182,6 +182,9 @@
                 Check Address Eligibility
             </button>
           </div>
+          <div class="col-md-4 bottomspace">
+
+          </div>
         </div>
         <hr style="border: 2px solid;"/>
 
