--- a/dfa/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
@@ -27,7 +27,7 @@
 
         <div class="col-md-5 app-heading">
           <span class="heading-text1">Disaster Financial Assistance</span>
-          <span class="heading-text2">(DFA)</span>
+          <span class="heading-text2">&nbsp;(DFA)</span>
         </div>
 
         <div class="col-md-4 menu-responsive">
