--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-prescreening/dfa-prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-prescreening/dfa-prescreening.component.html
@@ -13,7 +13,7 @@
   <div class="row justify-content-between resp-style">
     <div class="col-md-6">
       <button
-        class="button-s"
+        class="button-s save-button"
         mat-button
         type="button"
         (click)="clearAnswers()"
@@ -33,4 +33,5 @@
       </button>
     </div>
   </div>
+  <br/><br/>
 </div>
