--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-start/dfa-application-start.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-start/dfa-application-start.component.html
@@ -45,11 +45,14 @@
           <button
             class="button-p"
             mat-stroked-button
-            [disabled]="step.isLast == true && submitAllowed == false || !form?.valid"
+            [disabled]="!form?.valid"
             type="button"
             (click)="goForward(dfaApplicationStartStepper, step.isLast, step.component)"
           >
             {{ step.nextButtonLabel }}
+          </button>
+          <button (click)="showForm()">
+            Show Form
           </button>
         </div>
       </div>
