--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-eligibility-dialog/dfa-eligibility-dialog.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-eligibility-dialog/dfa-eligibility-dialog.component.html
@@ -1,4 +1,4 @@
-<h2><b>Disaster Financial Asssistance (DFA) Eligibility</b></h2>
+<h2><b>Disaster Financial Assistance (DFA) Eligibility</b></h2>
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content?.text"></div>
