pre-screening without login, feedback from uat

--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-prescreening-dialog/dfa-confirm-prescreening-dialog.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-prescreening-dialog/dfa-confirm-prescreening-dialog.component.html
@@ -2,6 +2,14 @@
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content.text"></div>
+  <div class="col-md-12" *ngIf="!isLoggedIn">
+    <br/><br/>If you are eligible for DFA and want to create an application, you must:<br/>
+    <ul>
+      <li>log in with your BC Services Card,</li>
+      <li>create a profile, and </li>
+      <li>repeat the prescreening process.</li>
+    </ul>
+  </div>
 </mat-dialog-content>
 
 <mat-dialog-actions>
