--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-property-address/damaged-property-address.component.html
@@ -212,7 +212,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="isResidentialTenant === true || isHomeowner === true">
+        <div class="row">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
               Excluding luxury/non-essential items and landscaping, do your losses total more than $1,000?<span style="color:red" >*</span>
