--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-events/dfa-events.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-events/dfa-events.component.html
@@ -1,9 +1,55 @@
-<div class="container container-frame">
-  <div class="heading-container">
+<div class="content-container"  style="padding-bottom: 100px; padding-top: 50px;" *ngIf="openDisasterEvents.length > 0">
+  <div class="row" *ngFor="let eventItem of openDisasterEvents">
+    <mat-card class="mat-elevation-z4 content" style="padding-bottom: 20px; padding-top: 20px;">
+      <div class="row">
+        <div class="col-4">
+          <span><b>Event Name:</b>&nbsp;&nbsp;{{eventItem.id == null ? "To Be Assigned" : eventItem.id }}</span>
+        </div>
+        <div class="col-4">
+          <span><b>Date of Event:</b>&nbsp;&nbsp;{{eventItem.startDate ? (eventItem.startDate | date: "dd-MMM-YYYY") : "TBD"}} to {{eventItem.endDate ? (eventItem.endDate | date: "dd-MMM-yyyy") : "TBD"}}</span>
+        </div>
+        <div class="col-4">
+          <span><b>90-Day Deadline:</b>&nbsp;&nbsp;{{eventItem.ninetyDayDeadline | date: "dd-MMM-yyyy"}}</span>
+        </div>
+      </div><br/><br/>
+      <table mat-table [dataSource]="getEffectedRegionCommuntiesForEvent(eventItem.eventId)" style="width:100%">
+        <!-- Effected Community -->
+        <ng-container matColumnDef="communityName">
+          <th mat-header-cell *matHeaderCellDef>
+            <b>Effected Community</b>
+          </th>
+          <td *matCellDef="let element" mat-cell>
+            {{ element.communityName }}
+          </td>
+        </ng-container>
+
+        <!-- EMBC Region -->
+        <ng-container matColumnDef="regionName">
+          <th mat-header-cell *matHeaderCellDef >
+            <b>Regional District</b>
+          </th>
+          <td *matCellDef="let element" mat-cell>
+            {{ element.regionName}}
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="effectedRegionCommunitiesColumnsToDisplay"></tr>
+        <tr
+          mat-row
+          *matRowDef="let element; columns: effectedRegionCommunitiesColumnsToDisplay"
+          class="example-element-row"
+          [style.height]="'auto'"
+        ></tr>
+      </table><br/><br/>
+      <button mat-button type="button" class="button-p" (click)="checkEligibility()">Check Eligibility</button>
+    </mat-card>
+  </div>
+</div>
+<div class="content-container" style="padding-bottom: 100px; padding-top: 50px;" *ngIf="openDisasterEvents.length == 0">
+ <div class="heading-container">
     <div class="row">
       <div class="col-md-12">
-        <span class="page-heading" style=""> Under Construction</span> <br />
+        <span class="page-heading"> No Open Events</span> <br />
       </div>
     </div>
-  </div>
 </div>
