--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -1,21 +1,10 @@
 <mat-card class="card-align">
   <mat-card-content>
-    <!--<p class="card-heading">
-      Contact Information <span style="color: red">*</span>
-    </p>-->
     <p>
       Your telephone and email address will ONLY be used to contact you about your post-disaster circumstances to determine your eligibility for disaster financial assistance and to exchange information between the Ministry of Emergency Management and Climate Readiness (or its agent) and Provincial Government Ministries and Crown Corporations, to receive
 information and to verify that the information provided by you is accurate.
     </p>
     <br />
-    <!--<p>
-      Do you authorize Emergency Management British Columbia and your Local
-      Emergency Program to communicate with you by email or phone regarding your
-      emergency situation? Note: if you do not authorize communications, you can
-      still complete your registration and receive emergency supports; however,
-      you will not receive your ESS file number confirmation.
-    </p>-->
-
     <form [formGroup]="contactInfoForm">
 
       <ng-container>
@@ -28,7 +17,6 @@ information and to verify that the information provided by you is accurate.
         <div class="row">
           <div class="col-md-4">
             <mat-form-field appearance="outline">
-              <!--[hideRequiredMarker]="contactFormControl?.hidePhoneRequired?.value" [errorStateMatcher]="requiredFieldsMatcher" -->
               <mat-label>Cellular Telephone Number</mat-label>
               <input
                 formControlName="cellPhoneNumber"
@@ -62,7 +50,6 @@ information and to verify that the information provided by you is accurate.
               >
             </mat-form-field>
             <mat-form-field appearance="outline">
-              <!--[hideRequiredMarker]="contactFormControl?.hidePhoneRequired?.value" [errorStateMatcher]="requiredFieldsMatcher" -->
               <mat-label>Residence Telephone Number</mat-label>
               <input
                 formControlName="residencePhone"
@@ -77,17 +64,8 @@ information and to verify that the information provided by you is accurate.
                 "
                 >Maximum length is 100 characters</mat-error
               >
-              <!--<mat-error
-                *ngIf="
-                  contactFormControl.phone.invalid &&
-                  contactFormControl.phone.hasError('incorrectLength')
-                "
-              >
-                Telephone number must have 10 digits</mat-error
-              >-->
             </mat-form-field>
             <mat-form-field appearance="outline">
-              <!--[hideRequiredMarker]="contactFormControl?.hidePhoneRequired?.value" [errorStateMatcher]="requiredFieldsMatcher" -->
               <mat-label>Alternate Telephone Number</mat-label>
               <input
                 formControlName="alternatePhone"
@@ -103,25 +81,9 @@ information and to verify that the information provided by you is accurate.
                 >Maximum length is 100 characters</mat-error
               >
 
-              <!--<mat-error
-                *ngIf="
-                  contactFormControl.phone.invalid &&
-                  contactFormControl.phone.hasError('incorrectLength')
-                "
-              >
-                Telephone number must have 10 digits</mat-error
-              >-->
             </mat-form-field>
           </div>
         </div>
-
-        <!-- <div class="row">
-          <div class="col-md-9">
-            <mat-checkbox formControlName="hidePhoneRequired" (change)="hidePhone($event)">I am not willing or able to
-              provide a telephone/mobile
-              number.</mat-checkbox>
-          </div>
-        </div> -->
         <br />
 
         <div class="row">
@@ -131,7 +93,7 @@ information and to verify that the information provided by you is accurate.
         </div>
 
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-7">
             <mat-form-field appearance="outline">
               <mat-label>This is the email address from your BC Services Card</mat-label>
               <input
@@ -165,13 +127,12 @@ information and to verify that the information provided by you is accurate.
               <mat-radio-button value=true>Yes</mat-radio-button>
               <mat-radio-button value=false>No</mat-radio-button>
             </mat-radio-group><br/><br/>
-            <mat-form-field appearance="outline" *ngIf="contactFormControl.currentEmail.value == false">
+            <mat-form-field appearance="outline" *ngIf="contactInfoForm.get('preferBCSCEmail').value === false">
               <mat-label>Provide a current email address</mat-label>
               <input
                 formControlName="email"
-                [required]="contactFormControl.currentEmail.value == false"
                 matInput
-                placeholder="Email Address"
+                placeholder="Provide a current email address"
                 autocomplete="new-password"
               />
               <mat-error
@@ -197,68 +158,18 @@ information and to verify that the information provided by you is accurate.
               >
             </mat-form-field>
           </div>
-          <div class="col-md-5 addressMessage" *ngIf="contactFormControl.confirmEmail.value">
-            This is your email address from your BC Services Card and can't be changed.
-            If you need to update your email address, visit
-            <br />
-            <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+          <div class="col-md-5">
+            <div class="addressMessage" *ngIf="contactFormControl.confirmEmail.value">
+              This is your email address from your BC Services Card and can't be changed.
+              If you need to update your email address, visit
+              <br />
+              <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
+            </div>
           </div>
         </div>
 
-        <!--<div class="row">
-          <div class="col-md-5">
-            <mat-form-field appearance="outline">-->
-              <!--[hideRequiredMarker]="contactFormControl?.hideEmailRequired?.value"-->
-              <!--<mat-label>Confirm Email Address</mat-label>
-              <input
-                formControlName="confirmEmail"
-                matInput
-                placeholder="Confirm Email Address"
-                [errorStateMatcher]="emailMatcher"
-              />
-              <mat-error
-                *ngIf="
-                  contactFormControl.confirmEmail.invalid &&
-                  contactFormControl.confirmEmail.hasError('required')
-                "
-              >
-                Confirm Email is required</mat-error
-              >
-              <mat-error
-                *ngIf="
-                  contactFormControl.confirmEmail.invalid &&
-                  contactFormControl.confirmEmail.hasError('email')
-                "
-              >
-                Invalid email</mat-error
-              >
-              <mat-error
-                *ngIf="
-                  contactFormControl?.confirmEmail?.parent?.hasError(
-                    'emailMatch'
-                  )
-                "
-              >
-                Email address mismatch</mat-error
-              >
-            </mat-form-field>
-          </div>
-        </div>-->
-
-        <!-- <div class="row">
-          <div class="col-md-12">
-            <mat-checkbox formControlName="hideEmailRequired" (change)="hideEmail($event)">I am not willing or able to
-              provide an email address.
-            </mat-checkbox>
-          </div>
-        </div> -->
       </ng-container>
     </form>
 
-    <!-- <p *ngIf="contactFormControl.hideEmailRequired.value && contactFormControl.hidePhoneRequired.value">
-      <span style="color: red"><b>Please Note:</b></span> if you are not able to provide an email address or contact
-      telephone number, should you be eligible
-      for emergency supports due to an evacuation, you will not be able to receive an e-Transfer.
-    </p> -->
   </mat-card-content>
 </mat-card>
