--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -95,14 +95,21 @@ information and to verify that the information provided by you is accurate.
         <div class="row">
           <div class="col-md-7">
             <mat-form-field appearance="outline">
-              <mat-label>This is the email address from your BC Services Card</mat-label>
+              <mat-label>Email Address</mat-label>
               <input
                 formControlName="email"
                 matInput
                 placeholder="Email Address"
                 autocomplete="new-password"
-                readonly="true"
+                required="true"
               />
+              <mat-error
+                *ngIf="
+                  contactFormControl.email.invalid &&
+                  contactFormControl.email.hasError('required')
+                "
+                >Email address is required</mat-error
+              >
               <mat-error
                 *ngIf="
                   contactFormControl.email.invalid &&
@@ -118,50 +125,10 @@ information and to verify that the information provided by you is accurate.
                 >Maximum length is 100 characters</mat-error
               >
             </mat-form-field>
-            <mat-label>Do you want to use this email to communicate and, if applicable, receive payments from the DFA?</mat-label>
-            <mat-radio-group
-              formControlName="preferBCSCEmail"
-              class="primary-radio-group"
-              required
-              aria-label="Select an option">
-              <mat-radio-button value=true>Yes</mat-radio-button>
-              <mat-radio-button value=false>No</mat-radio-button>
-            </mat-radio-group><br/><br/>
-            <mat-form-field appearance="outline" *ngIf="contactInfoForm.get('preferBCSCEmail').value === false">
-              <mat-label>Provide a current email address</mat-label>
-              <input
-                formControlName="email"
-                matInput
-                placeholder="Provide a current email address"
-                autocomplete="new-password"
-              />
-              <mat-error
-                *ngIf="
-                  contactFormControl.currentEmail.invalid &&
-                  contactFormControl.currentEmail.hasError('email')
-                "
-                >Current email address is required</mat-error
-              >
-              <mat-error
-                *ngIf="
-                  contactFormControl.currentEmail.invalid &&
-                  contactFormControl.currentEmail.hasError('email')
-                "
-                >Invalid email</mat-error
-              >
-              <mat-error
-                *ngIf="
-                  contactFormControl.currentEemail.invalid &&
-                  contactFormControl.currentEmail.hasError('maxLength')
-                "
-                >Maximum length is 100 characters</mat-error
-              >
-            </mat-form-field>
           </div>
           <div class="col-md-5">
             <div class="addressMessage" *ngIf="contactFormControl.confirmEmail.value">
-              This is your email address from your BC Services Card and can't be changed.
-              If you need to update your email address, visit
+              If you need to update your BC Services Card email address, visit
               <br />
               <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
             </div>
