bcsc email bypass

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -95,20 +95,20 @@ information and to verify that the information provided by you is accurate.
         <div class="row">
           <div class="col-md-7">
             <mat-form-field appearance="outline">
-              <mat-label>Email Address</mat-label>
+              <mat-label>Provide a current email address</mat-label>
               <input
                 formControlName="email"
                 matInput
-                placeholder="Email Address"
+                placeholder="Provide a current email address"
                 autocomplete="new-password"
-                required="true"
+                required
               />
               <mat-error
                 *ngIf="
                   contactFormControl.email.invalid &&
                   contactFormControl.email.hasError('required')
                 "
-                >Email address is required</mat-error
+                >Email is required</mat-error
               >
               <mat-error
                 *ngIf="
@@ -132,6 +132,50 @@ information and to verify that the information provided by you is accurate.
               <br />
               <a target="_blank" href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card/your-card/change-personal-information">BC Service Card, Change your personal information</a>
             </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-7">
+            <mat-form-field appearance="outline">
+              <mat-label>Re-enter your email address</mat-label>
+              <input
+                formControlName="confirmEmail"
+                matInput
+                placeholder="Current Email Address"
+                [errorStateMatcher]="emailMatcher"
+                required
+              />
+              <mat-error
+                *ngIf="
+                  contactFormControl?.confirmEmail.invalid &&
+                  contactFormControl?.confirmEmail.hasError('whitespaceError')
+                "
+              >
+                Confirm email is required</mat-error
+              >
+              <mat-error
+                *ngIf="
+                  contactFormControl?.confirmEmail.invalid &&
+                  contactFormControl?.confirmEmail.hasError('email')
+                "
+                >Invalid email</mat-error
+              >
+              <mat-error
+                *ngIf="
+                  contactFormControl.confirmEmail.invalid &&
+                  contactFormControl.confirmEmail.hasError('maxLength')
+                "
+                >Maximum length is 100 characters</mat-error
+              >
+              <mat-error
+                *ngIf="
+                  contactFormControl?.confirmEmail?.parent?.hasError('emailMatch')
+                "
+              >
+                Email address mismatch</mat-error
+              >
+            </mat-form-field>
           </div>
         </div>
 
