bcsc email bypass

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/evacuee-profile-forms/contact-info/contact-info.component.html
@@ -149,7 +149,7 @@ information and to verify that the information provided by you is accurate.
               <mat-error
                 *ngIf="
                   contactFormControl?.confirmEmail.invalid &&
-                  contactFormControl?.confirmEmail.hasError('whitespaceError')
+                  contactFormControl?.confirmEmail.hasError('required')
                 "
               >
                 Confirm email is required</mat-error
