--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-application/dfa-application.component.html
@@ -1,6 +1,3 @@
-<!--<div>
-  Current Applications
-</div>-->
 <div class="content-container" style="padding-bottom: 100px; padding-top: 50px;" *ngIf="lstApplications.length > 0">
   <div class="row"
            *ngFor="let applItem of lstApplications"
@@ -19,22 +16,13 @@
       </div>
     </div>
     </div>-->
-    <mat-card class="mat-elevation-z4 content">
+    <mat-card class="mat-elevation-z4 content" >
 
       <div style="border-bottom: 1px solid lightgrey;padding-bottom:20px;">
         <span>Event ID</span><br />
         <span style="font-size: 20px;"><b>{{applItem.eventId == null ? "To Be Assigned" : applItem.eventId }}</b></span>
       </div>
       <div style="border-bottom: 1px solid lightgrey;padding-bottom:20px; height: 210px;">
-       <!--<kendo-stepper
-          [style.width.px]="500"
-          [steps]="steps"
-          [linear]="false"
-          stepType="full"
-          [style.marginBottom.px]="50"
-          [(currentStep)]="current"
-        >
-      </kendo-stepper>-->
         <div class="col-md-3" style="margin-top: 20px;">
           <span><b>Application Status</b></span><br />
         </div>
@@ -138,7 +126,7 @@
  <div class="heading-container">
     <div class="row">
       <div class="col-md-12">
-        <span class="page-heading"> No Active Applications</span> <br />
+        <span class="page-heading"> No {{appType}} Applications</span> <br />
       </div>
     </div>
   </div>
